WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
62803
Cleanup ResourceRequest, ResourceResponse and ResourceError argument coders
https://bugs.webkit.org/show_bug.cgi?id=62803
Summary
Cleanup ResourceRequest, ResourceResponse and ResourceError argument coders
Anders Carlsson
Reported
2011-06-16 10:34:46 PDT
Cleanup ResourceRequest, ResourceResponse and ResourceError argument coders
Attachments
Patch
(28.25 KB, patch)
2011-06-16 10:35 PDT
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-06-16 10:35:35 PDT
Created
attachment 97458
[details]
Patch
Anders Carlsson
Comment 2
2011-06-16 13:01:19 PDT
Committed
r89060
: <
http://trac.webkit.org/changeset/89060
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug